For Displayable.viewer I change to get(0) instead of getFirst in case of older versions of java that dont have getFirst